2012-10-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompilerUtils.m (STCPrimaryExpression): Remove repeated
    attribute declaration from the implementation.

2012-02-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STSourceReader.m (-lineNumberForIndex:): Fix unintended fall through
    in a switch statement detected by clang.

2012-02-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompiledScript.m (-executedInEnvironment:):
    * STSmalltalkScriptObject.m (-forwardInvocation:):
    Fix potential space leak detected by clang.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompiledScript.m (+initialize, -executeInEnvironment:): Rename
    finalize selector to shutDown to avoid conflict with the NSObject
    -finalize method.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompiler.m (-indexOfTemporaryVariable, -indexOfNamedReference,
    -compilePrimary:, -compileExpression:): Minimal set of changes to
    accomodate to large NSNotFound value on 64-bit machines.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompiler.m (-exceptionInfo): Return exceptionInfo dictionary.

    * STCompiler.m (-compileMethodFromSource:forReceiver:, -compileString:,
    -indexOfNamedReference:): Remove unneeded variables reported by gcc 4.6.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBytecodes.h (-data, -length): Declare public methods.
    * STMethodContext.h: Remove declaration of unused methods, which were
    not implemented.

    * STCompiler.h (STCompiler, -compiledMethodFromSource:forReceiver:):
    * STCompiler.m (-compiledMethodFromSource:forReceiver:): STCompiler
    expects its receiver attribute to be a STScriptObject not just an
    object that satisfies the weaker STScriptObject protocol.

    * STSmalltalkScriptObject.m: Import NSDictionary and NSKeyValueCoding,
    whose methods are used in the implementation.

    * STCompiledMethod.h: Import definition of STMethod protocol instead